objects/CustomController__c.object
<CustomObject>
    <description>obj for testing</description>
    <fields>
        <fullName>textfield1__c</fullName>
        <label>textfield1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textfield2__c</fullName>
        <label>textfield2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textfield3__c</fullName>
        <label>textfield3</label>
        <type>TextArea</type>
    </fields>
    <label>CustomControllerObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CustomController Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomControllerObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>